[package]
name = "rust-algorithm"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "main"
path = "main.rs"


[profile.test]


[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"

[dependencies]
rand = "0.8.5"

[build-dependencies]
rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler" }
