[package]
name = "rust-algorithm"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "main"
path = "main.rs"


[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"


[dependencies]
proconio = "0.5.0"
rand = "0.8.5"
templates = { path = "./rust/rust-algo-lib/templates" }
